Add comprehensive benchmark measurement guide and scripts
- Add docs/benchmark/measurement-guide.md with detailed procedure
  - 3 conditions (Baseline/Sparse/Wide) with step-by-step instructions
  - Prometheus metrics collection timing and PromQL queries
  - Troubleshooting guide and experiment schedule
- Rewrite scripts/bench/run_benchmark.sh for production measurements
  - Round-robin execution to eliminate order bias
  - 30-second waits between measurements for Prometheus scrape
  - Automatic summary statistics (median, IQR, min, max)
  - System 1 (Compute) + System 2 (File) dual measurement
  - Auto-detection of existing data with helpful error messages
- Update scripts/bench/README.md with complete usage guide
  - Environment variables and examples for all 3 conditions
  - Output directory structure and metrics collection instructions

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>